--- a/JavaCL-Shaded/pom.xml
+++ b/JavaCL-Shaded/pom.xml
@@ -1,43 +1,40 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.nativelibs4java</groupId>
-	<artifactId>javacl-blas</artifactId>
-	<name>JavaCL BLAS / BridJ</name>
+	<artifactId>javacl-shaded</artifactId>
+	<name>JavaCL Shaded</name>
 	<url>http://code.google.com/p/javacl/</url>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
+	
 	<parent>
 		<groupId>com.nativelibs4java</groupId>
-		<artifactId>javacl-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>..</relativePath>
+		<artifactId>nativelibs4java-parent</artifactId>
+		<version>1.8-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
-
-	<dependencies>
 	
+	<properties>
+		<shadedArtifactAttached>false</shadedArtifactAttached>
+	</properties>
+	
+	<dependencies>
 		<dependency>
 			<groupId>com.nativelibs4java</groupId>
 			<artifactId>javacl</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	
-		<dependency>
-			<groupId>org.ujmp</groupId>
-			<artifactId>ujmp-core</artifactId>
-			<version>0.2.4</version>
-		</dependency>
-
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.nativelibs4java</groupId>
-				<artifactId>maven-javacl-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
-
-
-
