--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -17,7 +17,7 @@ For more info, please visit http://code.google.com/p/nativelibs4java/wiki/OpenCL
 	<parent>
 		<groupId>com.nativelibs4java</groupId>
 		<artifactId>javacl-parent</artifactId>
-		<version>1.0.0-RC4</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	
