--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-  - oraclejdk7
-  - openjdk7
   - openjdk6
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y pocl pocl-opencl-icd
-
-
+# before_install:
+#   - sudo apt-get update -qq
+#   - sudo apt-get install -y pocl pocl-opencl-icd
+#   - "export DISPLAY=:99.0"
+#   - "sh -e /etc/init.d/xvfb start"
