--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -36,13 +36,13 @@ For more info, please visit http://code.google.com/p/nativelibs4java/wiki/OpenCL
        <dependency>
          <groupId>org.jogamp.gluegen</groupId>
          <artifactId>gluegen-rt-main</artifactId>
-         <version>2.0.2-rc12</version>
+         <version>2.3.0</version>
         <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.jogamp.jogl</groupId>
          <artifactId>jogl-all-main</artifactId>
-         <version>2.0.2-rc12</version>
+         <version>2.3.0</version>
 			<scope>test</scope>
        </dependency>
 	</dependencies>
