--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ env:
 
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
+    - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers clinfo
+    - clinfo -a
