--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,11 @@ env:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers 
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
     - fglrxinfo -v
+
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.ivy2
