--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: java
-
 jdk:
 - oraclejdk8
 - openjdk6
-
 cache:
   directories:
   - $HOME/.m2
-
 env:
 - MAVEN_OPTS=-Xmx512m CL_LOG_ERRORS=stdout
-
 before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
+- sudo apt-get update -qq
+- sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
+- script/install_pocl.sh
