--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,8 @@ env:
 before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
-- script/install_pocl.sh
+# On mac: sudo port install libtool
+- sudo apt-get install -qq libltdl-dev
+- sudo apt-get install -qq ocl-icd-libopencl1
+before_script:
+- ./script/install_pocl.sh
