--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ cache:
 env:
 - MAVEN_OPTS=-Xmx512m CL_LOG_ERRORS=stdout
 before_install:
-- lsb_release -c;
-- lsb_release -r;
+- lsb_release -c
+- lsb_release -r
 - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
+- sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
 - sudo apt-get update -qq
 - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
 # On mac: sudo port install libtool
