--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,5 @@ before_install:
 - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
 - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
 - sudo apt-get update -qq
-- sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 opencl-headers
-# On mac: sudo port install libtool
-- sudo apt-get install -qq libltdl-dev
-- sudo apt-get install -qq ocl-icd-libopencl1
+- sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 beignet opencl-headers ocl-icd-libopencl1 libltdl-dev hwloc
 - ./scripts/install_pocl.sh
