--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_install:
 - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
 - sudo apt-get update -qq
 - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 beignet opencl-headers ocl-icd-libopencl1 libltdl-dev hwloc
-- ./scripts/install_pocl.sh
+# - ./scripts/install_pocl.sh
