--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,7 @@ before_install:
 - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
 - sudo apt-get update -qq
 - sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 beignet opencl-headers ocl-icd-libopencl1 libltdl-dev hwloc
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+
 # - ./scripts/install_pocl.sh
