--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ before_install:
 - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
 - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
 - sudo apt-get update -qq
-- sudo apt-get install -qq fglrx=2:8.960-0ubuntu1 beignet opencl-headers ocl-icd-libopencl1 libltdl-dev hwloc
+- sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 beignet beignet-opencl-icd
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 
+# ocl-icd-libopencl1 libltdl-dev hwloc
 # - ./scripts/install_pocl.sh
