try prepackaged pocl from vivid

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ before_install:
 - lsb_release -c
 - lsb_release -r
 - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) main universe restricted multiverse"
-- sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty main universe multiverse restricted"
+- sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu vivid main universe multiverse restricted"
 - sudo apt-get update -qq
-- sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 ocl-icd-libopencl1 libltdl-dev hwloc libhwloc-dev clinfo
+- sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 ocl-icd-libopencl1 clinfo libpocl1
 - sudo clinfo
-- ./scripts/install_pocl.sh
 # - sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 beignet beignet-opencl-icd
 # - export DISPLAY=:99.0 clinfo
 # - sh -e /etc/init.d/xvfb start
