--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 - sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 ocl-icd-libopencl1 libltdl-dev hwloc libhwloc-dev clinfo mesa-common-dev
 # sudo apt-get install libpocl1
 - ./scripts/install_pocl.sh
-- sudo clinfo
+- clinfo
 # - sudo apt-get install -qq opencl-headers fglrx=2:8.960-0ubuntu1 beignet beignet-opencl-icd
 # - export DISPLAY=:99.0 clinfo
 # - sh -e /etc/init.d/xvfb start
