--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -73,7 +73,7 @@ For more info, please visit http://code.google.com/p/nativelibs4java/wiki/OpenCL
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-                    <forkCount>1</forkCount>
+                    <forkCount>1.5C</forkCount>
                     <reuseForks>false</reuseForks>
                 </configuration>
 			</plugin>
